--- a/team.html
+++ b/team.html
@@ -51,7 +51,7 @@
       <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
         <div class="team-card">
           <div class="img-wrapper">
-            <img class="team-img" src="img/abhi.Jpg">
+            <img class="team-img" src="img/abhi.jpg">
           </div>
           <p class="text-blk name">
             ABHISHEK SHUKLA
